<?xml version="1.0"?>
<package format="2">
  <name>tf_republisher</name>
  <version>0.0.0</version>
  <description>The tf_republisher package</description>

  <maintainer email="ecorbellini@ekumenlabs.com">Ernesto Corbellini</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  
</package>
